# tdd-demo

./: CMakeLists.txt  LICENSE
include/: functions.h
src/: functions.cpp
tests/: test.cpp
